# musketeer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
docs/: INVARIANTS.md  STATE.md  migration-audit.md  release-checklist.md
scripts/: feeltest.sh  verify.sh
src/: cli.rs  error.rs  legacy_workspace.rs  lib.rs  main.rs  migration.rs  musketeer_namespace.rs  output.rs  replay_source.rs  small_adapter.rs  small_workspace.rs  workspace_mode.rs
src/commands/: check.rs  init.rs  log.rs  migrate.rs  mod.rs  packet.rs  run_new.rs  run_status.rs  util.rs  verdict.rs
src/fs/: hash.rs  layout.rs  mod.rs  read.rs  write.rs
src/invariants/: check.rs
src/model/: config.rs  execution_log.rs  mod.rs  progress.rs  run.rs  verdict.rs
src/ui/: interactive.rs  mod.rs  mode.rs  plain.rs  pretty.rs
tests/: cli_spine.rs  contract_cli.rs  phase3_small_native.rs  phase4_write_convergence.rs
